--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "css-loader": "^0.26.2",
+    "sass-loader": "^5.0.1",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0",
+    "vue-style-loader": "^2.0.1",
     "vuex": "^2.1.2"
   },
   "devDependencies": {
