--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "css-loader": "^0.26.2",
+    "css-loader": "^0.26.4",
+    "less": "^2.7.2",
+    "less-loader": "^3.0.0",
     "sass-loader": "^5.0.1",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0",
-    "vue-style-loader": "^2.0.1",
-    "vuex": "^2.1.2"
+    "vue-style-loader": "^2.0.3",
+    "vuex": "^2.1.2",
+    "vux": "^2.1.1-rc.10"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -79,6 +82,7 @@
     "vue-loader": "^10.3.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
+    "vux-loader": "^1.0.54",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
