--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^2.2.0",
     "vue-style-loader": "^2.0.3",
     "vuex": "^2.1.2",
+    "vuex-i18n": "^1.3.3",
     "vux": "^2.1.1-rc.10"
   },
   "devDependencies": {
