--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "css-loader": "^0.26.4",
     "less": "^2.7.2",
     "less-loader": "^3.0.0",
