--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.26.4",
     "less": "^2.7.2",
     "less-loader": "^3.0.0",
+    "moment": "^2.18.1",
     "sass-loader": "^5.0.1",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0",
