--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.18.1",
     "sass-loader": "^5.0.1",
     "vue": "^2.1.10",
+    "vue-amap": "^0.2.3",
     "vue-router": "^2.2.0",
     "vue-style-loader": "^2.0.3",
     "vuex": "^2.1.2",
