--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "calendar"]
 	path = calendar
-	url = git@github.com:mistkafka/vue-event-calendar.git
+	url = https://github.com/mistkafka/vue-event-calendar.git
