--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "css-loader": "^0.26.4",
+    "jquery": "^3.2.1",
     "less": "^2.7.2",
     "less-loader": "^3.0.0",
     "moment": "^2.18.1",
